<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <!-- 标题栏 -->
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/menu_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="{icon-menu}"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:padding="5dp"
            android:clickable="true"
            android:onClick="openDrawerLayout"/>

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="等车来"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/line_home"/>

    <View
        android:id="@+id/line_home"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/tab_host"
        android:background="@color/color_b4b4b4" />

    <com.bnrc.bnrcsdk.ui.tabhost.RTabHost
        android:id="@+id/tab_host"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/home_layout_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/home_image_view"
                android:text="{icon-home}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:textSize="20sp"
                android:textColor="@drawable/page_tab_text" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/home_tv_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/home_image_view_text"
                android:textSize="12sp"
                android:textColor="@drawable/page_tab_text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/route_layout_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/route_image_view"
                android:text="{icon-route}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:textSize="20sp"
                android:textColor="@drawable/page_tab_text"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/route_tv_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/route_image_view_text"
                android:textSize="12sp"
                android:textColor="@drawable/page_tab_text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ar_layout_view"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:layout_gravity="bottom">

            <com.bnrc.bnrcsdk.ui.circleimage.CircleImageView
                android:id="@+id/ar_image_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_above="@+id/ar_tv_view"
                android:src="@drawable/icon_ar"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/white"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ar_tv_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/ar_image_view_text"
                android:textSize="12sp"
                android:textColor="@drawable/page_tab_text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buscircle_layout_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            >

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/buscircle_image_view"
                android:text="{icon-buscircle}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:textSize="20sp"
                android:textColor="@drawable/page_tab_text"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/buscircle_tv_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/buscircle_image_view_text"
                android:textSize="12sp"
                android:textColor="@drawable/page_tab_text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/message_layout_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/message_image_view"
                android:text="{icon-message}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:textSize="20sp"
                android:textColor="@drawable/page_tab_text"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/message_tv_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/message_image_view_text"
                android:textSize="12sp"
                android:textColor="@drawable/page_tab_text" />

        </RelativeLayout>



    </com.bnrc.bnrcsdk.ui.tabhost.RTabHost>
</RelativeLayout>
